fix to tests and quality